<resources>
    <string name="app_name">Indoor_Volleyball</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="min_players">Min Players</string>
    <string name="max_players">Max Players</string>
    <string name="allow_plus_ones">Allow Plus Ones</string>
    <string name="allow_spectators">Allow Spectators</string>
    <string name="details_about_event">Details</string>
    <string name="event_code">Event Code</string>
    <string name="gym_pointer">Select A Gym</string>
    <string name="rotation_rule">Rotation Rule</string>
    <string name="website_format">Website: %1$s</string>
    <string name="business_status">Business: %1$s</string>
    <string name="phone_number_status">Phone Number: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="action_bar_primary">#FF866500</string>
    <string name="event_parcel_tag">event</string>
    <string name="event_get_creator_text">\creator:\ </string>
    <string name="event_get_start_time_text">Start Time:  \</string>
    <string name="event_get_end_time_text">\End Time: \</string>
    <string name="event_min_players_text">\Min Players: \</string>
    <string name="event_get_max_players_text">\Max Players: \</string>
    <string name="event_get_skill_level_text">\Skill Level: \</string>
    <string name="event_get_allow_plus_ones_text">\Allow Plus Ones: \</string>
    <string name="event_get_allow_spectators_text">\Allow Spectators \</string>
    <string name="event_get_details_text">\Details: \</string>
    <string name="event_get_event_code_text">\Event Code: \</string>
    <string name="event_get_rotation_text">\Rotation rule: \</string>
    <string name="event_creator_manage_event_text">Manage Event</string>
    <string name="event_query_class_name">Event</string>
    <string name="gym_parcel_tag">gym</string>
    <string name="gym_id_parcel_tag">gymId</string>
    <string name="event_item_min_text">\ Min: \</string>
    <string name="event_item_max_text">\ Max: \</string>
    <string name="date_formatter_text">M-dd-yyyy hh:mm:ss a</string>
    <string name="save_succeeded_text">The save succeeded</string>
    <string name="query_gym_text">Gym</string>
    <string name="aa_skill_level_text">AA</string>
    <string name="a_skill_level_text">A</string>
    <string name="bb_skill_level_text">BB</string>
    <string name="b_skill_level_text">B</string>
    <string name="c_skill_level_text">C</string>
    <string name="create_a_gym">Create A Gym</string>
    <string name="open_map_view">Open Map View</string>
    <string name="no_events_at_gym">No Events At this Gym Currently</string>
    <string name="no_events">No Events</string>
    <string name="enter_address_gym_search">Enter Gym Address</string>
    <string name="opening_hours_status">Hours: %1$s</string>
    <string name="rating_status">Rating: %1$s</string>
    <string name="website_status">Website: %1$s</string>
    <string name="location_has_no_image">This Location Has No Image</string>
    <string name="place_not_found">Place not found</string>
    <string name="name_status">Name: %1$s</string>
    <string name="place_id_status">Place Id: %1$s</string>
    <string name="is_open_status">Is Open: %1$s</string>
    <string name="create_an_event">Create An Event</string>
    <string name="view_more">View More</string>
    <string name="gym_photo">Gym Photo</string>
    <string name="follow_gym">follow gym</string>
    <string name="name_sign_up">Name:</string>
    <string name="email_sign_up">Email:</string>
    <string name="phone_sign_up">Phone:</string>
    <string name="zip_code_sign_up">Zip Code:</string>
    <string name="username_sign_up">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="profile_photo_new_user">Profile Photo New User</string>
    <string name="volleyball">Volleyball.</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="you_have_no_events_coming_up">You Have No Events Coming Up</string>
    <string name="you_are_not_currently_following_any_gyms">You Are Not Currently Following Any Gyms</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">enjJd2FD8l9X9Pal17iw6ZUZ57HnhhXnuQsGjU1Q</string>
    <string name="back4app_client_key">L6z6HK2qu1uZ2ePizF0ZaHV9L3dvR6Q6he8kt9PO</string>
    <string name="select_skill_level">Select Skill Level:</string>
    <string name="create_event">Create Event</string>
    <string name="query">Query</string>
    <string name="logout">logout</string>
    <string name="take_profile_photo">take profile photo</string>
    <string name="create_gym">Create Gym</string>
    <string name="nearby_gyms">Nearby Gyms</string>
    <string name="your_gyms">Your Gyms</string>
    <string name="method_only_supports_pager">Method only supports 0 and 1</string>
    <string name="next_event">next event:</string>
    <string name="save_changes_buttom">Save Changes</string>
    <string name="unfollow_event">Unfollow Event</string>
    <string name="follow_event">Follow Event</string>
    <string name="aa">AA</string>
    <string name="skill_level">Skill Level</string>
    <string name="edit_profile">edit</string>
    <string-array name="skill_choices">
        <item>@string/aa_skill_level_text</item>
        <item>@string/a_skill_level_text</item>
        <item>@string/bb_skill_level_text</item>
        <item>@string/b_skill_level_text</item>
        <item>@string/c_skill_level_text</item>
    </string-array>
</resources>