<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.Details.EventCreatorDetailActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/ivCreatorProfileDetailAttend"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvCreateEventAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Creator Name: "
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tvStartTimeAttend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCreatorProfileDetailAttend"
            />

        <TextView
            android:id="@+id/tvStartTimeAttend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"

            android:hint="@string/start_time"
            app:layout_constraintBottom_toTopOf="@id/tvEndTimeAttend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvEndTimeAttend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:layout_marginBottom="12dp"
            android:hint="@string/end_time"
            app:layout_constraintBottom_toTopOf="@id/tvMinPlayersAttend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvMinPlayersAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:layout_marginBottom="32dp"
            android:hint="@string/min_players"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/tvSkillLevelAttend"
            app:layout_constraintEnd_toStartOf="@id/tvMaxPlayersAttend"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvMaxPlayersAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:hint="@string/max_players"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvMinPlayersAttend"
            app:layout_constraintTop_toTopOf="@+id/tvMinPlayersAttend" />

        <TextView
            android:id="@+id/tvSkillLevelAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:layout_marginStart="8dp"
            android:layout_marginBottom="40dp"
            android:text="Skill Level"
            app:layout_constraintEnd_toStartOf="@id/tvAllowPlusOnesAttend"
            app:layout_constraintBottom_toTopOf="@+id/tvDetailsAttend"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvAllowPlusOnesAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:layout_marginStart="16dp"
            android:text="@string/allow_plus_ones"
            app:layout_constraintStart_toEndOf="@id/tvSkillLevelAttend"
            app:layout_constraintEnd_toStartOf="@id/tvAllowSpectatorsAttend"
            app:layout_constraintTop_toTopOf="@+id/tvSkillLevelAttend" />

        <TextView
            android:id="@+id/tvAllowSpectatorsAttend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:layout_marginEnd="8dp"
            android:text="@string/allow_spectators"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvAllowPlusOnesAttend"
            app:layout_constraintTop_toTopOf="@+id/tvSkillLevelAttend" />



        <TextView
            android:id="@+id/tvDetailsAttend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"

            android:hint="@string/details_about_event"
            app:layout_constraintBottom_toTopOf="@id/tvEventCodeAttend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvEventCodeAttend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_code"
            android:textAlignment="center"

            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/tvTeamRotationAttend"/>






        <TextView
            android:id="@+id/tvTeamRotationAttend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rotation_rule"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="36dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

