<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.Details.EventCreatorDetailActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tvStartTimeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/start_time"
            app:layout_constraintBottom_toTopOf="@id/tvEndTimeDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvEndTimeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/end_time"
            app:layout_constraintBottom_toTopOf="@id/etMinPlayersDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etMinPlayersDetail"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:hint="@string/min_players"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/tvSkillLevelDetail"
            app:layout_constraintEnd_toStartOf="@id/etMaxPlayersDetail"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etMaxPlayersDetail"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:hint="@string/max_players"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etMinPlayersDetail"
            app:layout_constraintTop_toTopOf="@+id/etMinPlayersDetail" />

        <Spinner
            android:id="@+id/spSkillLevelDetail"
            android:layout_width="@dimen/spinnerDim"
            android:layout_height="@dimen/spinnerDim"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toStartOf="@id/tvAllowPlusOnesDetail"
            app:layout_constraintStart_toEndOf="@+id/tvSkillLevelDetail"
            app:layout_constraintTop_toTopOf="@+id/tvSkillLevelDetail" />


        <Spinner
            android:id="@+id/spAllowPlusOnesDetail"
            android:layout_width="@dimen/spinnerDim"
            android:layout_height="@dimen/spinnerDim"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toStartOf="@id/tvAllowSpectatorsDetail"
            app:layout_constraintStart_toEndOf="@+id/tvAllowPlusOnesDetail"
            app:layout_constraintTop_toTopOf="@+id/tvAllowPlusOnesDetail" />

        <Spinner
            android:id="@+id/spAllowSpectatorsDetail"
            android:layout_width="@dimen/spinnerDim"
            android:layout_height="@dimen/spinnerDim"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvAllowSpectatorsDetail"
            app:layout_constraintTop_toTopOf="@+id/tvAllowSpectatorsDetail" />


        <EditText
            android:id="@+id/etTeamRotationDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rotation_rule"
            android:inputType="textMultiLine"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btCreateEventDetail"
            tools:layout_editor_absoluteX="36dp" />

        <EditText
            android:id="@+id/etDetailsDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/details_about_event"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@id/etEventCodeDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etEventCodeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_code"
            android:inputType="number"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/etTeamRotationDetail"/>


        <TextView
            android:id="@+id/tvCreateEventDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Edit An Event"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/tvStartTimeDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.357" />

        <TextView
            android:id="@+id/tvSkillLevelDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="40dp"

            android:text="Skill Level"
            app:layout_constraintBottom_toTopOf="@+id/etDetailsDetail"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvAllowPlusOnesDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/allow_plus_ones"
            app:layout_constraintStart_toEndOf="@id/spSkillLevelDetail"
            app:layout_constraintTop_toTopOf="@+id/tvSkillLevelDetail" />

        <TextView
            android:id="@+id/tvAllowSpectatorsDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/allow_spectators"
            app:layout_constraintStart_toEndOf="@id/spAllowPlusOnesDetail"
            app:layout_constraintTop_toTopOf="@+id/tvSkillLevelDetail" />

        <Button
            android:id="@+id/btCreateEventDetail"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="Create Event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

